[package]
name = "tantivy-bitpacker"
version = "0.6.0"
edition = "2021"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = []
description = """Tantivy-sub crate: bitpacking"""
repository = "https://github.com/quickwit-oss/tantivy"
keywords = []
documentation = "https://docs.rs/tantivy-bitpacker/latest/tantivy_bitpacker"
homepage = "https://github.com/quickwit-oss/tantivy"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17"]

[dependencies]
bitpacking = { version = "0.9.2", default-features = false, features = ["bitpacker1x"] }
pgrx = "0.12.7"

[dev-dependencies]
rand = "0.8"
proptest = "1"
