[package]
name = "tantivy-bitpacker"
version = "0.9.0"
edition = "2024"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = []
description = """Tantivy-sub crate: bitpacking"""
repository = "https://github.com/quickwit-oss/tantivy"
keywords = []
documentation = "https://docs.rs/tantivy-bitpacker/latest/tantivy_bitpacker"
homepage = "https://github.com/quickwit-oss/tantivy"

[dependencies]
bitpacking = { version = "0.9.2", default-features = false, features = ["bitpacker1x"] }

[dev-dependencies]
rand = "0.9"
proptest = "1"
