[package]
name = "tantivy-sstable"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = {path="../common", package="tantivy-common"}
tantivy-fst = "0.4"
# experimental gives us access to Decompressor::upper_bound
zstd = { version = "0.12", features = ["experimental"] }

[dev-dependencies]
proptest = "1"
criterion = "0.5"
names = "0.14"
rand = "0.8"

[[bench]]
name = "stream_bench"
harness = false
