[package]
name = "tantivy-sstable"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/quickwit-oss/tantivy"
repository = "https://github.com/quickwit-oss/tantivy"
keywords = ["search", "information", "retrieval", "sstable"]
categories = ["database-implementations", "data-structures", "compression"]
description = "sstables for tantivy"

[dependencies]
common = {version= "0.6", path="../common", package="tantivy-common"}
tantivy-fst = "0.4"
# experimental gives us access to Decompressor::upper_bound
zstd = { version = "0.12", features = ["experimental"] }

[dev-dependencies]
proptest = "1"
criterion = "0.5"
names = "0.14"
rand = "0.8"

[[bench]]
name = "stream_bench"
harness = false
