[package]
name = "tantivy-stacker"
version = "0.5.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/quickwit-oss/tantivy"
repository = "https://github.com/quickwit-oss/tantivy"
description = "term hashmap used for indexing"

[dependencies]
murmurhash32 = "0.3"
common = { version = "0.9", path = "../common/", package = "tantivy-common" }
ahash = { version = "0.8.11", default-features = false, optional = true }
rand_distr = "0.4.3"


[[bench]]
harness = false
name = "bench"
path = "benches/bench.rs"

[[example]]
name = "hashmap"
path = "example/hashmap.rs"

[dev-dependencies]
rand = "0.8.5"
zipf = "7.0.0"
rustc-hash = "2.1.0"
proptest = "1.2.0"
binggan = { version = "0.14.0" }

[features]
compare_hash_only = ["ahash"] # Compare hash only, not the key in the Hashmap
unstable = []                 # useful for benches.
