[package]
name = "tantivy-datafusion"
version = "0.1.0"
edition = "2021"
description = "DataFusion integration for tantivy search indices"
license = "MIT"

[dependencies]
tantivy = { path = ".." }
datafusion = "51"
datafusion-datasource = "51"
datafusion-physical-plan = "51"
datafusion-physical-expr = "51"
arrow = { version = "57", features = ["prettyprint"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
