[package]
name = "tantivy-datafusion"
version = "0.1.0"
edition = "2021"
description = "DataFusion integration for tantivy search indices"
license = "MIT"

[dependencies]
tantivy = { path = ".." }
datafusion = "51"
datafusion-datasource = "51"
datafusion-physical-plan = "51"
datafusion-physical-expr = "51"
datafusion-physical-optimizer = "51"
arrow = { version = "57", features = ["prettyprint"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
binggan = "0.14.2"
rand = "0.9"
rand_distr = "0.5"

[[bench]]
name = "agg_bench"
harness = false
